--- a/templates/citta.html
+++ b/templates/citta.html
@@ -11,19 +11,19 @@
  <div style="display: flex; flex-wrap: wrap;">
   <div style="flex: 1 1 50%;">
     <img src="{{url_for('static', filename='images/MilanoDuomo.jpg')}}" alt="Milano" width="100%" align="middle"/>
-    <p class="testo">Milano</p>
+    <a href="{{ url_for('Milano') }}">Milano</a>
   </div>
   <div style="flex: 1 1 50%;">
    <img src="{{url_for('static', filename='images/Firenze.jpg')}}" alt="Firenze" width="100%" align="middle"/>
-   <p class="testo">Firenze</p>
+   <a href="{{ url_for('Firenze') }}">Firenze</a>
   </div>
   <div style="flex: 1 1 50%;">
     <img src="{{url_for('static', filename='images/Venezia.jfif')}}" alt="Venezia" width="100%" align="middle"/>
-    <p class="testo">Venezia</p>
+    <a href="{{ url_for('Venezia') }}">Venezia</a>
   </div>
   <div style="flex: 1 1 50%;">
     <img src="{{url_for('static', filename='images/Napoli.jpg')}}" alt="Napoli" width="100%" align="middle"/>
-    <p class="testo">Napoli</p>
+    <a href="{{ url_for('Napoli') }}">Napoli</a>
   </div>
  </div>
 </body>
